tests/agl/rejections/match/non_exhaustive_enum.agl
enum Choice
  | none
  | some(value: int)

let value: Choice = none
case value of
  | none => ()
